<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".login.ui.SplashActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/title_text_color"
        android:layout_marginTop="26dp"
        android:textSize="@dimen/text_x_large"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="27dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/login_edit_style"
            android:inputType="number"
            android:maxLength="11"
            android:hint="@string/phone_number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/hint_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_valid_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/valid_code"
                style="@style/login_edit_style" />

            <com.saiyi.pregnantmother.common.view.CountDownView
                android:id="@+id/cdv_valid_code"
                android:layout_width="wrap_content"
                android:background="@drawable/bg_btn_identifycode"
                android:layout_height="34dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:enabled="false"
                android:minWidth="85dp"
                android:padding="5dp"
                android:textColor="@drawable/identify_btn_text_enbale_status_drawable"
                android:text="@string/send_valid_code"
                android:textSize="@dimen/text_main"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/hint_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/login_edit_style" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/hint_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_password_pre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            style="@style/login_edit_style" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/hint_text_color"/>
    </LinearLayout>

    <TextView
        android:id="@+id/logger_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/style_red"
        android:textSize="@dimen/text_main"
        android:singleLine="true"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        style="@style/submit_btn_style"
        android:enabled="false"
        android:text="@string/confirm" />
</LinearLayout>