<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".login.ui.SplashActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/title_text_color"
        android:layout_marginTop="70dp"
        android:textSize="@dimen/text_size_24dp"
        android:layout_gravity="center_horizontal"
        android:text="logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/login_edit_style"
            android:inputType="number"
            android:maxLength="11"
            android:hint="@string/phone_number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/hint_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/login_edit_style" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/hint_text_color"/>
    </LinearLayout>

    <TextView
        android:id="@+id/logger_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/style_red"
        android:textSize="@dimen/text_main"
        android:singleLine="true"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        style="@style/submit_btn_style"
        android:enabled="false"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#CCCCCC"
            android:textSize="@dimen/text_main"
            android:text="@string/go_register" />

        <TextView
            android:id="@+id/tv_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="#CCCCCC"
            android:textSize="@dimen/text_main"
            android:text="@string/forgot_pwd1" />
    </RelativeLayout>
</LinearLayout>