<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24.5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/historical_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hundreddp_btn_bg_black_shape"
                android:text="@string/date"
                android:textColor="@color/hint_text_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/historical_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hundreddp_btn_bg_black_shape"
                android:text="@string/time"
                android:textColor="@color/hint_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/historical_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hundreddp_btn_bg_black_shape"
                android:text="@string/frequency"
                android:textColor="@color/hint_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/historical_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hundreddp_btn_bg_black_shape"
                android:text="@string/status"
                android:textColor="@color/hint_text_color" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>