<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/text1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Please_select_the_time"
            android:textColor="@color/text1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@color/text1"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#11112233" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp">


            <com.saiyi.pregnantmother.my.view.DatePickerView
                android:id="@+id/year_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2"
    />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/text2"
                android:textSize="18sp"

                />
            <com.saiyi.pregnantmother.my.view.DatePickerView
                android:id="@+id/month_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/text2"
                android:textSize="18sp" />
            <com.saiyi.pregnantmother.my.view.DatePickerView
                android:id="@+id/day_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/text2"
                android:textSize="18sp" />
            <com.saiyi.pregnantmother.my.view.DatePickerView
                android:id="@+id/hour_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/hour_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/text2"

                android:textSize="18sp" />
            <com.saiyi.pregnantmother.my.view.DatePickerView
                android:id="@+id/minute_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/minute_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/text2"
                android:textSize="18sp"

                />



        </LinearLayout>

    </RelativeLayout>

</LinearLayout>