<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.ui.SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/selection_type"
        android:textColor="@color/title_text_color"
        android:textSize="@dimen/text_x_large" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_pregnant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/huaiyun" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/pregnant"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/text_middle" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_spicy_mother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/lama" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/spicy_mother"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/text_middle" />
        </RelativeLayout>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/selection_type_tips"
        android:textColor="#444444"
        android:textSize="@dimen/text_small" />
</RelativeLayout>